src/tests/code/shaders/parse-uniforms/invalid/missing-default.frag
// { type: "slider", min: 0.0, max: 1.0 }
uniform float halfBaked;

void main() {
    gl_FragColor = vec4(halfBaked);
}
